5-9-21
 - Russy focus tree
    - Expanding Eastern Russia's building limit
 - Names for USA and UK computation jewels, assuming the UK uses the US equipment, never really stated in the LN.
 - Started adding flight gear for mages.
    - Additional equipment to build mages
    - Will later hopefully have custom models for divisions
    