@@ -69,5 +69,89 @@
 				add_extra_state_shared_building_slots = 2
                 set_state_category = "rural"
 			}
+            644 = {
+				add_extra_state_shared_building_slots = 2
+                set_state_category = "rural"
+			}
 		}
 	}
+
+    shared_focus = {
+        id = RUS_expand_east_2_1
+        text = RUS_expand_east_2_1
+        icon = GFX_focus_generic_industry_1
+        cost = 4.00
+        prerequisite = {
+            focus = RUS_ruralize_east
+        }
+        relative_position_id = RUS_expand_east
+        x = -2
+        y = 3
+        completion_reward = {
+             562 = {
+                 add_extra_state_shared_building_slots = 2
+             }
+        }
+    }
+
+    shared_focus = {
+        id = RUS_expand_east_2_2
+        text = RUS_expand_east_2_2
+        icon = GFX_focus_generic_industry_1
+        cost = 4.00
+        prerequisite = {
+            focus = RUS_ruralize_east
+        }
+        relative_position_id = RUS_expand_east
+        x = 0
+        y = 3
+        completion_reward = {
+            574 = {
+                add_extra_state_shared_building_slots = 2
+            }
+        }
+    }
+
+    shared_focus = {
+        id = RUS_expand_east_2_3
+        text = RUS_expand_east_2_3
+        icon = GFX_focus_generic_industry_1
+        cost = 4.00
+        prerequisite = {
+            focus = RUS_ruralize_east
+        }
+        relative_position_id = RUS_expand_east
+        x = 2
+        y = 3
+        completion_reward = {
+            637 = {
+                add_extra_state_shared_building_slots = 2
+            }
+        }
+    }
+    
+    shared_focus = {
+        id = RUS_ruralize_east_2
+        text = RUS_ruralize_east_2
+        icon = GFX_focus_generic_industry_1
+        cost = 4.00
+        prerequisite = {
+            focus = RUS_expand_east_2_1
+            focus = RUS_expand_east_2_2
+            focus = RUS_expand_east_2_3
+        }
+        relative_position_id = RUS_expand_east
+        x = 0
+        y = 4
+        completion_reward = {
+            637 = {
+                set_state_category = "rural"
+            }
+            562 = {
+                set_state_category = "rural"
+            }
+            574 = {
+                set_state_category = "rural"
+            }
+        }
+    }
