@@ -414,3 +414,11 @@
  RUS_expand_east_2_desc:0 "We must build more in Northeast Siberia"
  RUS_ruralize_east:0 "Ruralize the East"
  RUS_ruralize_east_desc:0 "This area is too inhospitable, we shall fix that" 
+ RUS_expand_east_2_1:0 "Expand Okhotsk"
+ RUS_expand_east_2_1_desc:0 "We must build more in Okhotsk"
+ RUS_expand_east_2_2:0 "Expand Yakutsk"
+ RUS_expand_east_2_2_desc:0 "We must build more in Yakutsk"
+ RUS_expand_east_2_3:0 "Expand Kamchatka"
+ RUS_expand_east_2_3_desc:0 "We must build more in Kamchatka"
+ RUS_ruralize_east_2:0 "Continued Ruralization of the East"
+ RUS_ruralize_east_2_desc:0 "We shall continue to develop the eastern areas"
