@@ -1,3 +1,7 @@
+5-10-21
+ - Adjusted Idloa flag
+ - More Russy eastern expansion
+ 
 5-9-21
  - Russy focus tree
     - Expanding Eastern Russia's building limit
